compiler/lume_parse/src/snapshots/lume_parse__tests__array_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = [];\")"
---
SOURCE_FILE@0..11
  LET_STMT@0..11
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    ARRAY_EXPR@8..10
      LEFT_BRACKET@8..9 "["
      RIGHT_BRACKET@9..10 "]"
    SEMICOLON@10..11 ";"
