compiler/lume_parse/src/snapshots/lume_parse__tests__array_snapshots@nested.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = [a, [a, b]];\")"
---
SOURCE_FILE@0..15
  LET_STMT@0..15
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    ARRAY_EXPR@5..14
      LEFT_BRACKET@5..6 "["
      VARIABLE_EXPR@6..7
        IDENT@6..7 "a"
      COMMA@7..8 ","
      ARRAY_EXPR@8..13
        LEFT_BRACKET@8..9 "["
        VARIABLE_EXPR@9..10
          IDENT@9..10 "a"
        COMMA@10..11 ","
        VARIABLE_EXPR@11..12
          IDENT@11..12 "b"
        RIGHT_BRACKET@12..13 "]"
      RIGHT_BRACKET@13..14 "]"
    SEMICOLON@14..15 ";"
