compiler/lume_parse/src/snapshots/lume_parse__tests__array_snapshots@trailing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = [a, ];\")"
---
SOURCE_FILE@0..14
  LET_STMT@0..14
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    ARRAY_EXPR@8..13
      LEFT_BRACKET@8..9 "["
      VARIABLE_EXPR@9..10
        NAME@9..10
          IDENT@9..10 "a"
      COMMA@10..11 ","
      WHITESPACE@11..12 " "
      RIGHT_BRACKET@12..13 "]"
    SEMICOLON@13..14 ";"
