compiler/lume_parse/src/snapshots/lume_parse__tests__assignment_snapshots@member.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"foo.bar = a;\")"
---
SOURCE_FILE@0..12
  EXPR_STMT@0..12
    ASSIGNMENT_EXPR@0..11
      MEMBER_EXPR@0..8
        IDENT@0..3 "foo"
        DOT@3..4 "."
        IDENT@4..7 "bar"
        WHITESPACE@7..8 " "
      ASSIGN@8..9 "="
      VARIABLE_EXPR@9..11
        WHITESPACE@9..10 " "
        IDENT@10..11 "a"
    SEMICOLON@11..12 ";"
